[package]
authors = [
    "drp4rad0x"
]
categories = [
    "text-processing",
    "value-formatting"
]
keywords = [
    "help",
    "help message",
    "generate help message"
]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/drp4rad0x/help_crafter"
repository = "https://github.com/drp4rad0x/help_crafter"
name = "help_crafter"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Simple help message generator without hussle"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
