[package]
authors = [
    "drp4rad0x"
]
categories = [
    "text-processing",
    "value-formatting"
]
keywords = [
    "help",
    "help_message"
]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/drp4rad0x/help_crafter"
repository = "https://github.com/drp4rad0x/help_crafter"
name = "help_crafter"
version = "0.2.0"
edition = "2021"
readme = "README.md"
description = "Simple help message generator without hussle"
documentation = "https://docs.rs/help_crafter/latest/help_crafter/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
